chore: add roomName
