# src/main/java/com/codingpals/hotel/model/rest/Room.java
@@ -13,6 +13,7 @@ import lombok.Setter;
 @NoArgsConstructor
 public class Room {
   private int id;
+  private String roomName;
   private com.codingpals.hotel.model.Room.Status status;
   private String categoryName;
   private double price;
